flex wrap home fix

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -480,7 +480,7 @@ height: 100%;
   margin-bottom: .5 * $spacing-unit;
 
   display: flex;
-  //flex: 2 1 80%;
+  flex: 1.5 0 50%;
 
   flex-direction: column;
   //flex-wrap: wrap;
@@ -492,7 +492,7 @@ height: 100%;
   // max-width: calc(100vw - (#{$spacing-unit} * 40));
  // max-width: 40%;
   //min-width: 30%;
-  max-width: 60%;
+  //max-width: 60%;
 }
 
 
